# basic-locomotion-dls-isaaclab

./: .gitignore  README.md  pyproject.toml
amp_dataset/: boxes.npy  flat.npy  stairs.npy
deploy/: config.py  console.py  locomotion_policy_wrapper.py  play_mujoco.py  play_ros1.py  play_ros2.py
deploy/installation/: dockerfile  mamba_environment.yaml  mamba_environment_ros1.yaml  mamba_environment_ros2.yaml
deploy/msg_ws/install/: local_setup.sh  local_setup.zsh  setup.ps1  setup.sh
deploy/ros1_ws/devel/: .catkin  local_setup.sh  setup.sh
deploy/ros1_ws/install/: .rosinstall  _setup_util.py
deploy/ros1_ws/src/: CMakeLists.txt
deploy/ros1_ws/src/dls1_msgs/: CMakeLists.txt
deploy/ros1_ws/src/dls1_msgs/msg/: rl_signal_out.msg
deploy/ros2/: play_ros2.py
scripts/: list_envs.py
scripts/rsl_rl/: cli_args.py  play.py  play_amp.py  play_symm.py  replay_amp_dataset.py  train.py  train_amp.py  train_dagger.py  train_symm.py
scripts/sim_to_others/: locomotion_policy_wrapper.py  play_mujoco.py
scripts/sim_to_others/ros2/: console.py  integration_service.sh  play_calibration.py  play_ros2.py  startup_real.yaml  startup_sim.yaml
source/basic_locomotion_dls_isaaclab/: setup.py
source/basic_locomotion_dls_isaaclab/config/: extension.toml
tested_policies/aliengo/8k_128_128_128_aliengo_nosymm_tuned/: model_7950.pt  model_7999.pt
tested_policies/aliengo/8k_128_128_128_aliengo_stop_and_go/: model_7950.pt  model_7999.pt
tested_policies/aliengo/8k_128_128_128_stop/: model_0.pt  model_100.pt  model_1000.pt  model_1050.pt  model_1100.pt  model_1150.pt  (+155 more)
(+925 files in other folders)
